# VapourSynth-Waifu2x-w2xc

./: README.md  meson.build
Waifu2x-w2xc/: Waifu2x-w2xc.cpp  Waifu2x-w2xc.vcxproj
